@@ -1,5 +1,7 @@
 2008-11-04	Dmitry Dulepov	<dmitry@typo3.org>
 
+	* Initial work on comment model object
+	* Add directories for MVC
 	* Rename res/ directory and update all references
 	* Move pi1/static/ to static/
 	! comments 2.0 development starts
